fix(advanced-pie-chart) fix vertical alignment of legend

--- a/src/common/legend/advanced-legend.component.scss
+++ b/src/common/legend/advanced-legend.component.scss
@@ -1,6 +1,6 @@
 .advanced-pie-legend {
   float: left;
-  position: absolute;
+  position: relative;
   top: 50%;
   transform: translate(0, -50%);
 
